@@ -1,1 +1,6 @@
+<pre>
+<b>Note:</b> If you don't wish to appear on this list when making a donation, please tell me.
+Also if you want the amount or email adress or whatever listet, send me an email.
+
 * Andrew Pantyukhin
+</pre>
